src/objects/crms11__Related_Product__c.object
<CustomObject>
    <description>FlexPricer Related Product records store associations between related cross-sell, up-sell and down-sell Products.</description>
    <fields>
        <fullName>crms11__Compatible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offer the related product a compatible product to the selected product</description>
        <inlineHelpText>Offer the related product a compatible product to the selected product</inlineHelpText>
        <label>Compatible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Cross_sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offer the related product a complementary product to the selected product</description>
        <inlineHelpText>Offer the related product a complementary product to the selected product</inlineHelpText>
        <label>Cross-sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Down_sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offer the related product as lower-value product to the selected product</description>
        <inlineHelpText>Offer the related product as lower-value product to the selected product</inlineHelpText>
        <label>Down-sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Incompatible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Highlight the related product as an incompatible product with the selected product</description>
        <inlineHelpText>Highlight the related product as an incompatible product with the selected product</inlineHelpText>
        <label>Incompatible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Source_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Products</relationshipLabel>
        <relationshipName>Related_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Target_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Products (Target Product)</relationshipLabel>
        <relationshipName>Related_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Up_sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offer the related product as higher-value product to the selected product</description>
        <inlineHelpText>Offer the related product as higher-value product to the selected product</inlineHelpText>
        <label>Up-sell</label>
        <type>Checkbox</type>
    </fields>
    <label>Related Product</label>
    <nameField>
        <displayFormat>RP-{000000000}</displayFormat>
        <label>Related Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>